--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
             work correctly both with client-side routing and a non-root public URL.
             Learn how to configure a non-root public URL by running `npm run build`.
         -->
-        <title>React App</title>
+        <title>Mixed In Key - Music Analyzer</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -33,6 +33,11 @@
             //
             if (typeof(require) === "undefined") {
                 window.isInElectronRenderer = false;
+                // Add stub for when running in browser
+                window.ipcRendererStub = {
+                    on: function() {},
+                    send: function() {}
+                };
             } else {
                 window.isInElectronRenderer = true;
                 // see https://electron.atom.io/docs/faq/ 
